Causal Patching finished.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 __pycache__/
 classes/__pycache__/sfc_model.cpython-310.pyc
 03-patching/restructured_code_cusal_patching.py
+classes/__pycache__/sfc_model.cpython-310.pyc
