--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ __pycache__/
 classes/__pycache__/sfc_model.cpython-310.pyc
 03-patching/restructured_code_cusal_patching.py
 classes/__pycache__/sfc_model.cpython-310.pyc
+utils/__pycache__/prompts.cpython-310.pyc
+utils/__pycache__/enums.cpython-310.pyc
+classes/__pycache__/sfc_data_loader.cpython-310.pyc
+classes/__pycache__/sfc_data_loader.cpython-310.pyc
+utils/__pycache__/prompts.cpython-310.pyc
+utils/__pycache__/enums.cpython-310.pyc
+classes/__pycache__/sfc_model.cpython-310.pyc
+classes/__pycache__/sfc_data_loader.cpython-310.pyc
